# fastapi-chat-app

./: .gitignore  README.md
backend/: README.md  connection_manager.py  main.py  pyproject.toml  run.sh  utils.py
backend/routers/: __init__.py  room.py
frontend/: index.html  package.json
frontend/src/: App.jsx
frontend/src/components/: RoomMembersModal.jsx  RoomSidebar.jsx
frontend/src/components/ui/: button.jsx
